2019-10-27  Thierry Onkelinx  <thierry.onkelinx@inbo.be>

	* DESCRIPTION (Version, Date): Roll minor version
	* NAMESPACE:  import utils::packageVersion
	* man/sha1.Rd: update documentation
	* R/init.R: add "sha1PackageVersion" option
	* R/sha1.R: take object attributes into account when calculating the hash
	* inst.tinytest/test_sha1.R: add units tests for new functionality

2019-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/digest.R (digest): Call enc2utf8() only on Windows; add internal
	one-liner function to test for being on Windows

2019-10-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_encoding.R: Skip test unless on Windows

2019-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.22

2019-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/test_misc.R: File split off test_digest.R

2019-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Add Ion and Bill to Authors
	* README.md: Idem

2019-10-13  Jim Hester <james.f.hester@gmail.com>

	* src/digest.c: Add support for UTF-8 file paths on Windows
	* R/digest.R: Idem
	* inst/tinytest/test_encoding.R: Add tests for UTF-8 file paths.

2019-10-13  Bill Denney <wdenney@humanpredictions.com>

	* R/sha1.R: Add sha1.formula()
	* NAMESPACE: Idem
	* man/sha1.rd: Idem
	* inst/tinytest/test_sha1.R: Add tests for sha1.formula()

2019-10-12  Bill Denney <wdenney@humanpredictions.com>

	* R/sha1.R: Fix issue with num2hex() and input of Inf
	* inst/tinytest/test_sha1.R: Add Inf to the tests

2019-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* man/digest.Rd: Change three URL references to https
	* man/hmac.Rd: Ditto

	* R/utils.R: Move back functions used by digest() + makeVDigest()

	* R/AES.R: Added copyright header
	* R/digest.R: Idem
	* R/hmac.R: Idem
	* R/sha1.R: Idem
	* R/vdigest.R: Idem
